# switchby

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
resources/activity/: login.xml  server_select.xml
src/: main.cpp
src/activity/: detail_activity.cpp  detail_activity.hpp  home_tab.hpp  library_activity.hpp  login_activity.hpp  player_activity.cpp  player_activity.hpp  search_activity.hpp  server_select_activity.hpp  settings_activity.hpp  tab_activity.hpp
src/api/: emby_client.cpp  emby_client.hpp
src/utils/: cache_manager.hpp  config.hpp  thread_pool.hpp
src/view/: poster_cell.hpp
